raffia/tests/error/scss/at-rule/function/double-commas-at-end.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but `,` received
  ┌─ double-commas-at-end.scss:1:36
  │
1 │ @function double-comma-error($a,$b,,) {
  │                                    ^


